--- a/Develop/index.html
+++ b/Develop/index.html
@@ -26,10 +26,56 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p> Today is <span id="time"></span></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class = "container" spellcheck="false">
+        <div class = "row my-row">
+            <div class = "col my-col col-a1 colorcode" id = "9"> 9am </div>
+            <div class = "col my-col col-a2 edit_cont" > </div>
+            <div class = "col my-col col-a3 edit_btn"> edit </div>
+        </div>
+        <div class = "row my-row" >
+            <div class = "col my-col col-b1 colorcode" id = "10"> 10am </div>
+            <div class = "col my-col col-b2 edit_cont">  </div>
+            <div class = "col my-col col-b3 edit_btn"> edit </div>
+        </div>
+        <div class = "row my-row" >
+            <div class = "col my-col col-c1 colorcode" id = "11" > 11am </div>
+            <div class = "col my-col col-c2 edit_cont">  </div>
+            <div class = "col my-col col-c3 edit_btn"> edit </div>
+        </div>
+        <div class = "row my-row">
+          <div class = "col my-col col-a1 colorcode" id = "9"> 12pm </div>
+          <div class = "col my-col col-a2 edit_cont" > </div>
+          <div class = "col my-col col-a3 edit_btn"> edit </div>
+      </div>
+      <div class = "row my-row" >
+          <div class = "col my-col col-b1 colorcode" id = "10"> 1pm </div>
+          <div class = "col my-col col-b2 edit_cont">  </div>
+          <div class = "col my-col col-b3 edit_btn"> edit </div>
+      </div>
+      <div class = "row my-row" >
+          <div class = "col my-col col-c1 colorcode" id = "11" > 2pm </div>
+          <div class = "col my-col col-c2 edit_cont">  </div>
+          <div class = "col my-col col-c3 edit_btn"> edit </div>
+      </div>
+      <div class = "row my-row">
+        <div class = "col my-col col-a1 colorcode" id = "9"> 3pm </div>
+        <div class = "col my-col col-a2 edit_cont" > </div>
+        <div class = "col my-col col-a3 edit_btn"> edit </div>
+    </div>
+    <div class = "row my-row" >
+        <div class = "col my-col col-b1 colorcode" id = "10"> 4pm </div>
+        <div class = "col my-col col-b2 edit_cont">  </div>
+        <div class = "col my-col col-b3 edit_btn"> edit </div>
+    </div>
+    <div class = "row my-row" >
+        <div class = "col my-col col-c1 colorcode" id = "11" > 5pm </div>
+        <div class = "col my-col col-c2 edit_cont">  </div>
+        <div class = "col my-col col-c3 edit_btn"> edit </div>
+    </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
